option('dbus', type: 'boolean', value: false, description: 'D-Bus support')
option('daemon-user', type: 'string', value: 'glogikd', description: 'GLogiK daemon user')
option('daemon-group', type: 'string', value: 'glogikd', description: 'GLogiK daemon group')
option('debug-gkdbus', type: 'boolean', value: false, description: 'GKDBus extra debugging. default: no')
option('debug-keys', type: 'boolean', value: false, description: 'Keys extra debugging. default: no')
option('debug-libusb', type: 'boolean', value: false, description: 'Libusb extra debugging. default: no')
option('debug-pbmfont', type: 'boolean', value: false, description: 'PBMFont extra debugging. default: no')
option('debug-lcd-plugins', type: 'boolean', value: false, description: 'LCD plugins extra debugging. default: no')
option('desktop-service-group', type: 'string', value: 'glogiks', description: 'GLogiKs desktop service group')
option('docdir', type: 'string', value: 'GLogiK', description: 'documentation installation default directory')
option('hidapi', type: 'boolean', value: true, description: 'hidapi support')
option('notifications', type: 'boolean', value: true, description: 'notifications support')
option('libnotify', type: 'boolean', value: true, description: 'libnotify support')
option('qt5', type: 'boolean', value: false, description: 'Qt5 Graphical User Interface')
option('qt6', type: 'boolean', value: false, description: 'Qt6 Graphical User Interface')
option('relative_udev_rules_dir', type: 'boolean', value: false, description: 'Relative udev rules installation directory. Used only for debugging/development.')
option('udev_rules_dir', type: 'string', value: '', description: 'udev rules installation directory')
