option('dbus', type: 'boolean', value: true, description: 'D-Bus support')
option('daemon_user', type: 'string', value: 'glogikd', description: 'GLogiK daemon user')
option('daemon_group', type: 'string', value: 'usb', description: 'GLogiK daemon group')
option('debug_gkdbus', type: 'boolean', value: false, description: 'GKDBus extra debugging. default: no')
option('debug_keys', type: 'boolean', value: false, description: 'Keys extra debugging. default: no')
option('debug_libusb', type: 'boolean', value: false, description: 'Libusb extra debugging. default: no')
option('debug_pbmfont', type: 'boolean', value: false, description: 'PBMFont extra debugging. default: no')
option('debug_lcd_plugins', type: 'boolean', value: false, description: 'LCD plugins extra debugging. default: no')
option('desktop_service_group', type: 'string', value: 'glogiks', description: 'GLogiKs desktop service group')
option('hidapi', type: 'boolean', value: true, description: 'hidapi support')
option('qt5', type: 'boolean', value: true, description: 'Qt5 Graphical User Interface')
option('relative_udev_rules_dir', type: 'boolean', value: false, description: 'Relative udev rules installation directory. Used only for debugging/development.')
option('udev_rules_dir', type: 'string', value: '', description: 'udev rules installation directory')
