
pbm_dir = $(datadir)/$(PACKAGE)/pbm
splashscreen_dir = $(pbm_dir)/splashscreen
systemMonitor_dir = $(pbm_dir)/systemMonitor
pbmFonts_dir = $(pbm_dir)/fonts

dist_splashscreen__DATA = \
	%D%/splashscreen/splashscreen01.pbm \
	%D%/splashscreen/splashscreen02.pbm

dist_systemMonitor__DATA = \
	%D%/systemMonitor/skeleton.pbm

dist_pbmFonts__DATA = \
	%D%/fonts/monospace85.pbm \
	%D%/fonts/monospace86.pbm
