
pbm_dir = $(datadir)/$(PACKAGE)/pbm
endscreen_dir = $(pbm_dir)/endscreen
splashscreen_dir = $(pbm_dir)/splashscreen
systemMonitor_dir = $(pbm_dir)/systemMonitor
pbmFonts_dir = $(pbm_dir)/fonts

dist_endscreen__DATA = \
	%D%/endscreen/endscreen.pbm

dist_splashscreen__DATA = \
	%D%/splashscreen/splashscreen01.pbm

dist_systemMonitor__DATA = \
	%D%/systemMonitor/skeleton.pbm

dist_pbmFonts__DATA = \
	%D%/fonts/monospace85.pbm \
	%D%/fonts/monospace86.pbm
