
lib_LTLIBRARIES += libGKDBus.la

libGKDBus_la_CXXFLAGS = \
						@AM_CXXFLAGS@ \
						$(DBUS_CFLAGS)

libGKDBus_la_LDFLAGS = \
						@AM_LDFLAGS@

libGKDBus_la_LIBADD = \
				$(DBUS_LIBS) \
				libGKUtils.la

libGKDBus_la_SOURCES = \
	%D%/ArgTypes/ArgBase.cpp \
	%D%/ArgTypes/ArgBase.hpp \
	%D%/ArgTypes/TypeBase.cpp \
	%D%/ArgTypes/TypeBase.hpp \
	%D%/ArgTypes/boolean.cpp \
	%D%/ArgTypes/boolean.hpp \
	%D%/ArgTypes/string.cpp \
	%D%/ArgTypes/string.hpp \
	%D%/ArgTypes/stringArray.cpp \
	%D%/ArgTypes/stringArray.hpp \
	%D%/ArgTypes/int32.cpp \
	%D%/ArgTypes/int32.hpp \
	%D%/ArgTypes/uint16.cpp \
	%D%/ArgTypes/uint16.hpp \
	%D%/ArgTypes/uint32.cpp \
	%D%/ArgTypes/uint32.hpp \
	%D%/ArgTypes/uint64.cpp \
	%D%/ArgTypes/uint64.hpp \
	%D%/ArgTypes/uint8.cpp \
	%D%/ArgTypes/uint8.hpp \
	%D%/ArgTypes/GKeysID.cpp \
	%D%/ArgTypes/GKeysID.hpp \
	%D%/ArgTypes/GKeysIDArray.cpp \
	%D%/ArgTypes/GKeysIDArray.hpp \
	%D%/ArgTypes/MKeysID.cpp \
	%D%/ArgTypes/MKeysID.hpp \
	%D%/ArgTypes/MKeysIDArray.cpp \
	%D%/ArgTypes/MKeysIDArray.hpp \
	%D%/ArgTypes/macro.cpp \
	%D%/ArgTypes/macro.hpp \
	%D%/ArgTypes/DevicesMap.cpp \
	%D%/ArgTypes/DevicesMap.hpp \
	%D%/ArgTypes/LCDPPArray.cpp \
	%D%/ArgTypes/LCDPPArray.hpp \
	%D%/ArgTypes/DepsMap.cpp \
	%D%/ArgTypes/DepsMap.hpp \
	%D%/messages/GKDBusMessage.cpp \
	%D%/messages/GKDBusMessage.hpp \
	%D%/messages/GKDBusReply.cpp \
	%D%/messages/GKDBusReply.hpp \
	%D%/messages/GKDBusErrorReply.cpp \
	%D%/messages/GKDBusErrorReply.hpp \
	%D%/messages/GKDBusRemoteMethodCall.cpp \
	%D%/messages/GKDBusRemoteMethodCall.hpp \
	%D%/messages/GKDBusBroadcastSignal.cpp \
	%D%/messages/GKDBusBroadcastSignal.hpp \
	%D%/messages/GKDBusAsyncContainer.cpp \
	%D%/messages/GKDBusAsyncContainer.hpp \
	%D%/events/callback.hpp \
	%D%/events/callbackEvent.hpp \
	%D%/events/GKDBusEvent.cpp \
	%D%/events/GKDBusEvent.hpp \
	%D%/events/SIGas2v.cpp \
	%D%/events/SIGas2v.hpp \
	%D%/events/SIGb2v.cpp \
	%D%/events/SIGb2v.hpp \
	%D%/events/SIGq2v.cpp \
	%D%/events/SIGq2v.hpp \
	%D%/events/SIGs2as.cpp \
	%D%/events/SIGs2as.hpp \
	%D%/events/SIGs2b.cpp \
	%D%/events/SIGs2b.hpp \
	%D%/events/SIGs2D.cpp \
	%D%/events/SIGs2D.hpp \
	%D%/events/SIGs2s.cpp \
	%D%/events/SIGs2s.hpp \
	%D%/events/SIGs2v.cpp \
	%D%/events/SIGs2v.hpp \
	%D%/events/SIGsG2v.cpp \
	%D%/events/SIGsG2v.hpp \
	%D%/events/SIGsGM2v.cpp \
	%D%/events/SIGsGM2v.hpp \
	%D%/events/SIGsm2v.cpp \
	%D%/events/SIGsm2v.hpp \
	%D%/events/SIGss2aG.cpp \
	%D%/events/SIGss2aG.hpp \
	%D%/events/SIGss2am.cpp \
	%D%/events/SIGss2am.hpp \
	%D%/events/SIGss2aP.cpp \
	%D%/events/SIGss2aP.hpp \
	%D%/events/SIGss2b.cpp \
	%D%/events/SIGss2b.hpp \
	%D%/events/SIGss2s.cpp \
	%D%/events/SIGss2s.hpp \
	%D%/events/SIGss2v.cpp \
	%D%/events/SIGss2v.hpp \
	%D%/events/SIGssyt2b.cpp \
	%D%/events/SIGssyt2b.hpp \
	%D%/events/SIGssyyy2b.cpp \
	%D%/events/SIGssyyy2b.hpp \
	%D%/events/SIGv2v.cpp \
	%D%/events/SIGv2v.hpp \
	%D%/GKDBusConnection.hpp \
	%D%/GKDBus.cpp \
	%D%/GKDBus.hpp \
	%D%/GKDBusEvents.cpp \
	%D%/GKDBusEvents.hpp
